--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.custom__button {
+    box-shadow: 1px 1px 5px 1px rgb(82, 82, 177);
+    background-color: rgb(9, 9, 53);
+    color: wheat;
+    margin-top: 30px;
+    cursor: pointer;
+    padding: 12px;
+    border: none;
+    border-radius: 50%;
+    letter-spacing: 1px;
+    font-family: serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.custom__button:focus {
+    color: whitesmoke;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom__button:hover {
+    box-shadow: 1px 1px 5px 1px rgb(82, 82, 177) inset;
 }
