--- a/src/About/about.css
+++ b/src/About/about.css
@@ -1,6 +1,6 @@
 .app__about {
-    background-color: rgb(16, 16, 16);
-    color: whitesmoke;
+    background-color: #e6ccb2;
+    color: #02222e;
     padding: .5rem 4rem 2rem 2rem;
 }
 
@@ -12,10 +12,107 @@
     margin-top: 30px;
     margin-bottom: 22px;
     text-align: center;
-    color: wheat;
+    color: #9c6644;
     font-family: serif;
     letter-spacing: 2px;
     padding: 15px 0px 0px 0px;
+}
+
+.fade-in {
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
+
+}
+
+.visible {
+    opacity: 1;
+    font-weight: bolder;
+}
+
+
+
+.fade-in1 {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.visible1 {
+    opacity: 1;
+    animation: fadeInAnimation 1s ease-in-out forwards;
+}
+
+@keyframes fadeInAnimation {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
+.fade-in2 {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.visible2 {
+    opacity: 1;
+    animation: fadeInAnimation 4s ease-in-out forwards;
+}
+
+@keyframes fadeInAnimation {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.slide-in {
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: transform 1.5s ease-in-out, opacity 1.5s ease-in-out;
+}
+
+.slide {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.shaking-icon {
+    /* font-size: 32px;
+    margin: 10px; */
+    transition: transform 0.2s ease-in-out;
+}
+
+.shake {
+    animation: shakeAnimation 0.5s 2;
+}
+
+@keyframes shakeAnimation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(-10deg);
+    }
+
+    50% {
+        transform: rotate(10deg);
+    }
+
+    75% {
+        transform: rotate(-10deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
 
 .second_part {
@@ -26,6 +123,7 @@
     margin-left: 20px;
     letter-spacing: 2px;
     font-family: serif;
+    color: #7f5539;
 }
 
 .about__content h5 {
@@ -34,8 +132,14 @@
     font-family: serif;
 }
 
+.aboutt {
+    background-color: #ede0d4;
+    /* color: white; */
+}
+
 .about__content p {
     text-align: justify;
+
 }
 
 .about__info-content {
@@ -67,10 +171,13 @@
 }
 
 .heading {
-    color: wheat;
+    color: #123c69;
     margin-bottom: px;
-    font-size: 25px;
+    font-size: 18px;
+
+
 }
+
 
 .title {
     font-size: 15px;
