--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,7 +1,5 @@
 .navbar {
-    background-color: rgb(2, 2, 26);
-    padding: 1rem 1.2rem;
-    /* width: 100%; */
+    background-color: #e5d0bc;
     display: flex;
     justify-content: space-between;
 }
@@ -22,7 +20,7 @@
 }
 
 .navbar__links li a {
-    color: wheat;
+    color: #7f5539;
     text-decoration: none;
     font-weight: 500;
     letter-spacing: 0.5px;
@@ -34,17 +32,18 @@
     font-weight: 800;
 
 }
-.navleft{
+
+.navleft {
     margin-top: 10px;
 
 }
+
 .name a {
     margin-left: 5px;
     font-size: medium;
     text-decoration: none;
-    color: wheat;
+    color: #7f5539;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    /* font-size: small; */
 }
 
 .navleft {
@@ -54,13 +53,16 @@
 
 @keyframes anchorr {
     0% {
-        color: cadetblue;
+        color: #7f5539;
     }
 
     100% {
-        color: rgb(4, 58, 95);
+        color: #d5a17e;
     }
 }
+
+
+
 
 .navbar__smallscreen {
     display: none;
@@ -70,6 +72,7 @@
 .navbar__open {
     cursor: pointer;
     position: fixed;
+    align-items: self-end;
     right: 1px;
     top: 6px;
 }
@@ -88,7 +91,7 @@
     left: 0;
     width: 100%;
     height: 600px;
-    background-color: rgb(4, 4, 53);
+    background-color: #d6ac83;
     transition: .5s ease;
     flex-direction: column;
 
@@ -109,7 +112,7 @@
 .navbar__smallscreen-links a {
 
     text-decoration: none;
-    color: wheat;
+    color: #021825;
     justify-content: center;
     font-size: 20px;
     line-height: 100px;
@@ -140,17 +143,6 @@
     }
 }
 
-@keyframes slide-bottom {
-    0% {
-        -webkit-transform: translateY(-25%);
-        transform: translateY(-25%);
-    }
-
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-}
 
 @media screen and (max-width: 1250px) {
     .navbar__links {
@@ -223,6 +215,7 @@
         display: flex;
     }
 
+
     .navbar__smallscreen {
         padding: 6px;
     }
@@ -244,6 +237,5 @@
     .navbar__smallscreen {
         padding: 6px;
     }
-
 
 }
